added cross-env dev dependency so that providing env vars in the command line works for both mac and windows platforms

--- a/package.json
+++ b/package.json
@@ -5,32 +5,33 @@
 	"main": "index.js",
 	"scripts": {
 		"lint": "node_modules/.bin/eslint .",
-		"setup": "npm i && sls deploy",
-		"auth": "bash ./scripts/auth.bash",
+		"setup": "npx cross-env AWS_PROFILE=dev npm i && sls deploy",
+		"auth": "npx cross-env AWS_PROFILE=dev bash -x ./scripts/auth.bash",
 		"format": "prettier --write .",
-		"getJWT": "npm run auth dev us-east-2 signup && npm run auth dev us-east-2 signin",
-		"getAPIKey": "aws apigateway get-api-keys --name-query monolith-rest-api-dev-api-key --region us-east-2 --include-values --query 'items[0].value' --output text",
+		"getJWT": "npx cross-env AWS_PROFILE=dev npm run auth dev us-east-2 signup && npm run auth dev us-east-2 signin",
+		"getAPIKey": "npx cross-env AWS_PROFILE=dev aws apigateway get-api-keys --name-query monolith-rest-api-dev-api-key --region us-east-2 --include-values --query 'items[0].value' --output text",
 		"test": "jest",
 		"test:coverage": "jest --coverage"
 	},
 	"devDependencies": {
 		"@aws-sdk/client-dynamodb": "^3.341.0",
-		"@aws-sdk/lib-dynamodb": "^3.341.0",
 		"@aws-sdk/client-sqs": "^3.354.0",
+		"@aws-sdk/lib-dynamodb": "^3.341.0",
+		"@aws-sdk/util-endpoints": "*",
 		"@serverless/compose": "^1.2.4",
+		"aws-sdk": "*",
+		"aws-sdk-client-mock": "*",
+		"cross-env": "^7.0.3",
+		"eslint": "*",
+		"jest": "*",
+		"prettier": "*",
 		"serverless": "^3.15.2",
-		"serverless-offline": "^8.8.1",
 		"serverless-deployment-bucket": "^1.6.0",
 		"serverless-iam-roles-per-function": "^3.2.0",
-		"eslint": "*",
-		"prettier": "*",
-		"@aws-sdk/util-endpoints": "*",
-		"aws-sdk": "*",
-		"serverless-webpack": "*",
-		"webpack": "*",
+		"serverless-offline": "^13.2.0",
 		"serverless-prune-plugin": "*",
-		"jest": "*",
-		"aws-sdk-client-mock": "*"
+		"serverless-webpack": "*",
+		"webpack": "*"
 	},
 	"dependencies": {
 		"crypto": "*"
