--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"lint": "node_modules/.bin/eslint .",
-		"setup": "npx cross-env AWS_PROFILE=dev npm i && sls deploy",
+		"setup": "npm i && npx cross-env AWS_PROFILE=dev sls deploy",
 		"auth": "npx cross-env AWS_PROFILE=dev bash -x ./scripts/auth.bash",
 		"format": "prettier --write .",
 		"getJWT": "npx cross-env AWS_PROFILE=dev npm run auth dev us-east-2 signup && npm run auth dev us-east-2 signin",
